[build-system]
requires = ["flit_core >=3.7,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gen_fex"
version = "0.1.2"
description = "Probabilistic feature extraction for financial data in JAX framework"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "LICENSE" }  # This line ensures the license is recognized
authors = [
    { name = "Ahmed Nabil Atwa", email = "dr.ahmedna.ai@gmail.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.26.0,<2.3.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "jax>=0.4.13,<0.5.0",
    "jaxlib>=0.4.13,<0.5.0",
    "chex>=0.1.81,<0.2.0",
    "distrax>=0.1.5,<0.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0,<8.0.0",
    "flit>=3.7,<4.0"
]

[project.urls]
homepage = "https://github.com/AI-Ahmed/gen_fex"
repository = "https://github.com/AI-Ahmed/gen_fex"

[tool.flit.module]
name = "gen_fex"  # Name of the package
directory = "gen_fex"  # New directory name containing __init__.py

[tool.flit.sdist]
include = ["tests/"]